# cmake-project-template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  codecov.yml  run_build.sh
CMake/Modules/: proj_CodeCoverage.cmake  proj_Macros.cmake
CodeDebugging/: CMakeLists.txt
CodeDebugging/source/: CodeDebugging.cpp
CodeTesting/: CMakeLists.txt
CodeTesting/source/: CodeTesting.cpp
Libs/: CMakeLists.txt
Libs/AddAlt/: CMakeLists.txt
Libs/AddAlt/include/: AddAlt.h
Libs/AddAlt/source/: AddAlt.c
Libs/DoubleLinkedList/: CMakeLists.txt
Libs/DoubleLinkedList/include/: DoubleLinkedList.h
Libs/DoubleLinkedList/include/private/: DoubleLinkedListHelpers.h  Node.h
Libs/DoubleLinkedList/source/: DoubleLinkedList.c  DoubleLinkedListHelper.c  DoubleLinkedListHelpers.c
Libs/Sorts/: CMakeLists.txt
Libs/Sorts/include/: Sorts.h
Libs/Sorts/include/private/: SortsHelper.h
Libs/Sorts/source/: Bubble.c  Insert.c  Merge.c  Quick.c  QuickStable.c  Radix.c  Select.c  SelectStable.c  Sorts.c
Libs/SubtractAlt/: CMakeLists.txt
LibsC/: CMakeLists.txt
LibsC/AddAlt/: CMakeLists.txt
LibsC/DoubleLinkedList/: CMakeLists.txt
LibsC/DoubleLinkedList/include/: DoubleLinkedList.h
LibsC/DoubleLinkedList/include/private/: DoubleLinkedListHelper.h
LibsC/Sorts/include/private/: SortsHelper.h
LibsC/Sorts/source/: Insert.c  Merge.c  Quick.c  Select.c  SelectStable.c  Sorts.c
LibsC/SubtractAlt/: CMakeLists.txt
LibsC/SubtractAlt/include/: SubtractAlt.h
LibsC/SubtractAlt/source/: SubtractAlt.c
LibsCXX/: CMakeLists.txt
LibsCXX/Graph/: CMakeLists.txt
LibsCXX/Graph/include/: Graph.hpp  GraphFactory.hpp
LibsCXX/Graph/include/private/: AdjacencyList.hpp  AdjacencyMatrix.hpp  Data.hpp  Edge.hpp  Node.hpp  ObjectOriented.hpp  StringData.hpp
LibsCXX/Graph/source/: AdjacencyList.cpp  AdjacencyMatrix.cpp  Edge.cpp  Node.cpp  ObjectOriented.cpp
LibsCXX/GraphSearch/: CMakeLists.txt
LibsCXX/GraphSearch/include/: GraphSearch.hpp
LibsCXX/GraphSearch/include/private/: GraphSearchHelper.hpp
Test/: CMakeLists.txt
Test/Libs/: CMakeLists.txt
Test/Libs/AddAltTest/: AddAltTest.cpp  CMakeLists.txt
Test/Libs/DoubleLinkedListTest/: CMakeLists.txt  DoubleLinkedListTest.cpp  DoubleLinkedListTest.hpp
Test/Libs/SortsTest/: CMakeLists.txt  SortsTest.cpp  SortsTest.hpp
Test/Libs/SubtractAltTest/: CMakeLists.txt
Test/LibsC/: CMakeLists.txt
Test/LibsC/AddAltTest/: AddAltTest.hpp  CMakeLists.txt
Test/LibsC/DoubleLinkedListTest/: DoubleLinkedListTest.cpp
Test/LibsC/SortsTest/: SortsTest.cpp  SortsTest.hpp
Test/LibsC/SubtractAltTest/: CMakeLists.txt  SubtractAltTest.cpp  SubtractAltTest.hpp
Test/LibsCXX/Graph/: CMakeLists.txt  GraphTest.cpp  GraphTest.hpp
Test/LibsCXX/GraphSearch/: CMakeLists.txt  GraphSearchTest.cpp  GraphSearchTest.hpp
